Bug 1226293. Followup: add SVG tests. r=bz